Add kruskal wallis & post-hoc dunn tests

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -118,6 +118,31 @@
     "    plt.xticks(tick_indexes, new_ticks)\n",
     "\n",
     "\n",
+    "def simpleticks_x_y():\n",
+    "    # replaces the x and y ticks with the same labels\n",
+    "    num_ticks = len(plt.gca().get_xticklabels())\n",
+    "    new_ticks = []\n",
+    "    for i, tick in enumerate(plt.gca().get_xticklabels()):\n",
+    "        # get rid of \"TEL12\" or \"TEL80\" from the tick label\n",
+    "        # get rid of TEL12 if applicable\n",
+    "        if \"TEL12\" in tick.get_text():\n",
+    "            if \"control\" in tick.get_text():\n",
+    "                tick.set_text(\"TEL12\")\n",
+    "            else:\n",
+    "                tick.set_text(tick.get_text().replace(\"TEL12\", \"\"))\n",
+    "        # get rid of TEL80 if applicable\n",
+    "        if \"TEL80\" in tick.get_text():\n",
+    "            if \"control\" in tick.get_text():\n",
+    "                tick.set_text(\"TEL80\")\n",
+    "            else:\n",
+    "                tick.set_text(tick.get_text().replace(\"TEL80\", \"\"))\n",
+    "        new_ticks.append(tick.get_text())\n",
+    "    # set the ticks\n",
+    "    tick_indexes = np.linspace(0, num_ticks - 1, num_ticks)\n",
+    "    plt.xticks(tick_indexes, new_ticks)\n",
+    "    plt.yticks(tick_indexes, new_ticks)\n",
+    "\n",
+    "\n",
     "# set default font size for axes labels\n",
     "plt.rcParams.update({\"axes.labelsize\": 16})\n",
     "\n",
@@ -608,6 +633,45 @@
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"mean protein area for grains with protein\")\n",
     "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
+    "# kruskal wallis test for all samples for total grain volume\n",
+    "from scipy.stats import kruskal\n",
+    "\n",
+    "result = kruskal(*[grains_df[grains_df[\"display_name\"] == sample][\"total_grain_volume\"] for sample in sample_order])\n",
+    "print(f\"kruskal wallis test for total grain volume: {result.statistic:.2f}, p-value: {result.pvalue:.2e}\")\n",
+    "threshold = 0.05\n",
+    "if result.pvalue < threshold:\n",
+    "    print(f\"results are statistically significant (p-value < {threshold})\")\n",
+    "else:\n",
+    "    print(f\"results are not statistically significant (p-value > {threshold})\")\n",
+    "\n",
+    "# post-hoc test\n",
+    "from scikit_posthocs import posthoc_dunn\n",
+    "\n",
+    "posthoc_results = posthoc_dunn(\n",
+    "    grains_df,\n",
+    "    val_col=\"total_grain_volume\",\n",
+    "    group_col=\"display_name\",\n",
+    "    p_adjust=\"holm\",\n",
+    ")\n",
+    "\n",
+    "print(\"post-hoc test results:\")\n",
+    "print(posthoc_results)\n",
+    "\n",
+    "# create a plot of a matrix of the results\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_results,\n",
+    "    annot=True,\n",
+    "    fmt=\".2e\",\n",
+    "    cmap=\"binary_r\",\n",
+    "    cbar_kws={\"label\": \"p-value\"},\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for total grain volume\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
     "plt.show()"
    ]
   },
