add saving of stats and plotting of stats

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
     "from AFMReader.topostats import load_topostats\n",
     "\n",
@@ -196,6 +197,7 @@
     "                    ordered_coords = molecule_ordered_trace_data[\"ordered_coords\"]\n",
     "                    molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
     "                    molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
+    "                    molecule_data[\"circular\"] = molecule_ordered_trace_data[\"mol_stats\"][\"circular\"]\n",
     "                    bbox = molecule_ordered_trace_data[\"bbox\"]\n",
     "                    print(f\"  grain {current_grain_index} molecule {current_molecule_index} bbox {bbox}\")\n",
     "                    grains_dictionary[grain_index][\"molecule_data\"][current_molecule_index] = molecule_data\n",
@@ -324,18 +326,19 @@
     "defect_stats_dir = postprocess_dir / \"defect_stats\"\n",
     "defect_stats_dir.mkdir(exist_ok=True)\n",
     "\n",
-    "interval_nm = 2\n",
-    "curvature_average_window_nm = 10\n",
+    "interval_nm = 2 # nm\n",
+    "curvature_average_window_nm = 10 # nm\n",
     "curvature_rolling_window_size = int(curvature_average_window_nm / interval_nm)\n",
     "\n",
-    "curvature_threshold = 0.15\n",
-    "height_threshold = 2.0\n",
+    "curvature_threshold_radpernm = 0.15 # radians/nm\n",
+    "height_threshold_nm = 2.0 # nm\n",
     "\n",
-    "total_index_to_stop_at = 10\n",
+    "total_index_to_stop_at = 10000\n",
     "\n",
-    "coindicing_defect_distance_threshold_nm = 10\n",
+    "coindicing_defect_distance_threshold_nm = 10 # nm\n",
     "\n",
-    "grains_defects_stats_dictionary = {}\n",
+    "grains_defects_dictionary = {}\n",
+    "defect_stats_list = []\n",
     "# for each grain dictionary, if multiple molecules, skip\n",
     "for total_index, (grain_index, grain_data) in enumerate(grains_dictionary.items()):\n",
     "    if total_index >= total_index_to_stop_at:\n",
@@ -346,7 +349,7 @@
     "    print(f\"grain {grain_index} {filename}\")\n",
     "    pixel_to_nm_scaling = grain_data[\"pixel_to_nm_scaling\"]\n",
     "\n",
-    "    grains_defects_stats_dictionary[grain_index] = {}\n",
+    "    grains_defects_dictionary[grain_index] = {}\n",
     "\n",
     "    # for each molecule, grab the curvatures, heights, and spline coords\n",
     "    for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
@@ -355,6 +358,10 @@
     "        curvatures = molecule_data[\"curvatures\"]\n",
     "        heights = molecule_data[\"heights\"]\n",
     "        distances = molecule_data[\"distances\"]\n",
+    "        circular = molecule_data[\"circular\"]\n",
+    "        if not circular:\n",
+    "            print(f\"  molecule {molecule_index} is not circular, skipping\")\n",
+    "            continue\n",
     "\n",
     "        resampled_points = resample_points_regular_interval(\n",
     "            points=spline_coords, interval=interval_nm / pixel_to_nm_scaling, circular=True\n",
@@ -384,10 +391,10 @@
     "            resampled_heights[i] = height\n",
     "\n",
     "        # Find curvature peaks\n",
-    "        curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold)[0]\n",
+    "        curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_radpernm)[0]\n",
     "\n",
     "        # Find height dips\n",
-    "        height_defects_indexes = np.where(resampled_heights < height_threshold)[0]\n",
+    "        height_defects_indexes = np.where(resampled_heights < height_threshold_nm)[0]\n",
     "\n",
     "        # defects are currently in form [defect_index1, defect_index2, ...]\n",
     "        # need in form [0, 0, 1, 1, 1, 0, 0, 0]\n",
@@ -440,7 +447,7 @@
     "        if coinciding_defect_bool[0] and coinciding_defect_bool[-1]:\n",
     "            num_coinciding_defects -= 1\n",
     "\n",
-    "        grains_defects_stats_dictionary[grain_index][molecule_index] = {\n",
+    "        grains_defects_dictionary[grain_index][molecule_index] = {\n",
     "            \"image\": image,\n",
     "            \"mask\": mask,\n",
     "            \"filename\": filename,\n",
@@ -456,6 +463,17 @@
     "            \"num_height_defects\": num_height_defects,\n",
     "            \"num_coinciding_defects\": num_coinciding_defects,\n",
     "        }\n",
+    "\n",
+    "        # save the defect stats to a list\n",
+    "        defect_stats_list.append(\n",
+    "            {\n",
+    "                \"grain_index\": grain_index,\n",
+    "                \"molecule_index\": molecule_index,\n",
+    "                \"num_curvature_defects\": num_curvature_defects,\n",
+    "                \"num_height_defects\": num_height_defects,\n",
+    "                \"num_coinciding_defects\": num_coinciding_defects,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "        # plot\n",
     "        # plot_line_coloured(\n",
@@ -486,7 +504,7 @@
     "        ax[0, 0].set_xlabel(\"Distance (nm)\")\n",
     "        ax[0, 0].set_ylabel(\"Curvature (1/nm)\")\n",
     "        ax[0, 0].hlines(\n",
-    "            [curvature_threshold, -curvature_threshold],\n",
+    "            [curvature_threshold_radpernm, -curvature_threshold_radpernm],\n",
     "            0,\n",
     "            cumulative_resampled_distances[-1],\n",
     "            color=\"k\",\n",
@@ -496,7 +514,7 @@
     "        ax[0, 1].plot(cumulative_resampled_distances, resampled_heights, \"k\")\n",
     "        ax[0, 1].set_xlabel(\"Distance (nm)\")\n",
     "        ax[0, 1].set_ylabel(\"Height (nm)\")\n",
-    "        ax[0, 1].hlines([height_threshold], 0, cumulative_resampled_distances[-1], color=\"k\", linestyles=\"dashed\")\n",
+    "        ax[0, 1].hlines([height_threshold_nm], 0, cumulative_resampled_distances[-1], color=\"k\", linestyles=\"dashed\")\n",
     "        ax[0, 1].set_title(f\"Height\")\n",
     "        ax[1, 0].imshow(image)\n",
     "        ax[1, 0].plot(resampled_points[:, 1], resampled_points[:, 0], \"g.\")\n",
@@ -527,9 +545,13 @@
     "        )\n",
     "        plt.close(fig)\n",
     "\n",
+    "# save the defect stats to a csv\n",
+    "defect_stats_df = pd.DataFrame(defect_stats_list)\n",
+    "defect_stats_df.to_csv(defect_stats_dir / \"defect_stats.csv\", index=False)\n",
+    "\n",
     "# pickle the dictionary\n",
     "with open(defect_stats_dir / \"grains_defects_stats_dictionary.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(grains_defects_stats_dictionary, f)"
+    "    pickle.dump(grains_defects_dictionary, f)"
    ]
   },
   {
@@ -538,7 +560,28 @@
    "id": "bb175c36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# load the csv\n",
+    "defect_stats_df = pd.read_csv(defect_stats_dir / \"defect_stats.csv\")\n",
+    "\n",
+    "print(defect_stats_df.head())\n",
+    "\n",
+    "print(len(defect_stats_df))\n",
+    "\n",
+    "# plot number of curvature defects per grain\n",
+    "defect_stats_df[\"num_curvature_defects\"].hist()\n",
+    "plt.xlabel(\"Number of Curvature Defects\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()\n",
+    "defect_stats_df[\"num_height_defects\"].hist()\n",
+    "plt.xlabel(\"Number of Height Defects\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()\n",
+    "defect_stats_df[\"num_coinciding_defects\"].hist()\n",
+    "plt.xlabel(\"Number of Coinciding Defects\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
