add post-hoc for TBL

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -646,10 +646,21 @@
     "else:\n",
     "    print(f\"results are not statistically significant (p-value > {threshold})\")\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7839823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# post-hoc test\n",
     "from scikit_posthocs import posthoc_dunn\n",
     "\n",
-    "posthoc_results = posthoc_dunn(\n",
+    "posthoc_total_grain_volume_results = posthoc_dunn(\n",
     "    grains_df,\n",
     "    val_col=\"total_grain_volume\",\n",
     "    group_col=\"display_name\",\n",
@@ -657,12 +668,12 @@
     ")\n",
     "\n",
     "print(\"post-hoc test results:\")\n",
-    "print(posthoc_results)\n",
+    "print(posthoc_total_grain_volume_results)\n",
     "\n",
     "# create a plot of a matrix of the results\n",
     "plt.figure(figsize=(10, 10))\n",
     "sns.heatmap(\n",
-    "    posthoc_results,\n",
+    "    posthoc_total_grain_volume_results,\n",
     "    annot=True,\n",
     "    fmt=\".2e\",\n",
     "    cmap=\"binary_r\",\n",
@@ -672,7 +683,60 @@
     "plt.yticks(rotation=0)\n",
     "plt.xticks(rotation=90)\n",
     "simpleticks_x_y()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# same matrix plot but binary with threshold 0.05\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_total_grain_volume_results < threshold,\n",
+    "    annot=posthoc_total_grain_volume_results < threshold,\n",
+    "    fmt=\"\",\n",
+    "    cmap=\"binary\",\n",
+    "    cbar=False,\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for total grain volume (p-value < 0.05)\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
+    "plt.show()\n",
+    "\n",
+    "# post-hoc for total branch lengths\n",
+    "posthoc_total_branch_lengths_results = posthoc_dunn(\n",
+    "    grains_df,\n",
+    "    val_col=\"total_branch_lengths\",\n",
+    "    group_col=\"display_name\",\n",
+    "    p_adjust=\"holm\",\n",
+    ")\n",
+    "print(\"post-hoc test results:\")\n",
+    "print(posthoc_total_branch_lengths_results)\n",
+    "# create a plot of a matrix of the results\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_total_branch_lengths_results,\n",
+    "    annot=True,\n",
+    "    fmt=\".2e\",\n",
+    "    cmap=\"binary_r\",\n",
+    "    cbar_kws={\"label\": \"p-value\"},\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for total branch lengths\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
+    "plt.show()\n",
+    "# same matrix plot but binary with threshold 0.05\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_total_branch_lengths_results < threshold,\n",
+    "    annot=posthoc_total_branch_lengths_results < threshold,\n",
+    "    fmt=\"\",\n",
+    "    cmap=\"binary\",\n",
+    "    cbar=False,\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for total branch lengths (p-value < 0.05)\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
+    "plt.show()\n"
    ]
   },
   {
