[WIP] root mean square from mean for cols and samples

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -240,7 +240,7 @@
     "    print(\n",
     "        f\"percentage shift in {column} between {sample1} and {sample2}: {percentage_shift_value:.2f}%. Average type: {average_type}.\\n\"\n",
     "        f\"Distribution info: ({avg_str})\"\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -314,6 +314,7 @@
     "        total_protein_volume = grain_data[grain_data[\"class_number\"] == 2][\"volume\"].sum()\n",
     "        total_protein_area = grain_data[grain_data[\"class_number\"] == 2][\"area\"].sum()\n",
     "        mean_protein_area = total_protein_area / num_protein_segments if num_protein_segments > 0 else 0\n",
+    "        smallest_bounding_area = grain_data[\"smallest_bounding_area\"].values[0]\n",
     "        total_dna_volume = grain_data[grain_data[\"class_number\"] == 1][\"volume\"].sum()\n",
     "        displayname = grain_data[\"display_name\"].values[0]\n",
     "        basename = grain_data[\"basename\"].values[0]\n",
@@ -333,6 +334,7 @@
     "                \"total_grain_volume\": total_protein_volume + total_dna_volume,\n",
     "                \"mean_protein_area\": mean_protein_area,\n",
     "                \"total_protein_area\": total_protein_area,\n",
+    "                \"smallest_bounding_area\": smallest_bounding_area,\n",
     "                \"display_name\": displayname,\n",
     "                \"basename\": basename,\n",
     "            }\n",
@@ -461,6 +463,33 @@
     "    ax.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
+    "# smallest bounding area vs protein volume\n",
+    "plot_cols = 3\n",
+    "plot_rows = int(np.ceil(len(display_names) / plot_cols))\n",
+    "plt.figure(figsize=(plot_cols * 5, plot_rows * 5))\n",
+    "for i, display_name in enumerate(display_names):\n",
+    "    display_name_data = grains_df[grains_df[\"display_name\"] == display_name]\n",
+    "    ax = plt.subplot(plot_rows, plot_cols, i + 1)\n",
+    "    # scatterplot\n",
+    "    sns.scatterplot(\n",
+    "        x=\"smallest_bounding_area\",\n",
+    "        y=\"total_protein_volume\",\n",
+    "        data=display_name_data[display_name_data[\"protein_present\"] == 1],\n",
+    "        color=\"orange\",\n",
+    "        alpha=1,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "    ax.set_title(display_name)\n",
+    "    ax.set_xlabel(\"smallest bounding area (nm^2)\")\n",
+    "    ax.set_ylabel(\"total protein volume (nm^3)\")\n",
+    "    ax.set_xlim(0, grains_df[\"smallest_bounding_area\"].max() * 1.1)\n",
+    "    ax.set_ylim(0, grains_df[\"total_protein_volume\"].max() * 1.1)\n",
+    "    ax.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
     "\n",
     "# number of DNA segments vs display name\n",
     "plt.figure()\n",
@@ -644,10 +673,7 @@
     "if result.pvalue < threshold:\n",
     "    print(f\"results are statistically significant (p-value < {threshold})\")\n",
     "else:\n",
-    "    print(f\"results are not statistically significant (p-value > {threshold})\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "    print(f\"results are not statistically significant (p-value > {threshold})\")"
    ]
   },
   {
@@ -736,7 +762,7 @@
     "plt.yticks(rotation=0)\n",
     "plt.xticks(rotation=90)\n",
     "simpleticks_x_y()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -762,6 +788,152 @@
     "print(\n",
     "    f\"Mann-Whitney u-test: u-statistic: {u_stat:.4f}, p-value: {p_val:.4f} Significant: {p_val < significance_level}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ba848a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmsd_from_mean_single_sample(\n",
+    "    df: pd.DataFrame,\n",
+    "    sample: str,\n",
+    "    column: str,\n",
+    ") -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the root mean square deviation from the mean for a single sample.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    sample : str\n",
+    "        The sample to calculate the RMSD for.\n",
+    "    column : str\n",
+    "        The column to calculate the RMSD for.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        The RMSD from the mean for the sample.\n",
+    "    \"\"\"\n",
+    "    sample_data = df[df[\"display_name\"] == sample]\n",
+    "    mean_value = sample_data[column].mean()\n",
+    "    rmsd = np.sqrt(((sample_data[column] - mean_value) ** 2).mean())\n",
+    "    return rmsd\n",
+    "\n",
+    "def rmsd_from_mean_all_samples(\n",
+    "    df: pd.DataFrame,\n",
+    "    column: str,\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Calculate the root mean square deviation from the mean for all samples.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    column : str\n",
+    "        The column to calculate the RMSD for.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        A DataFrame containing the RMSD from the mean for each sample.\n",
+    "    \"\"\"\n",
+    "    rmsd_list = []\n",
+    "    for sample in df[\"display_name\"].unique():\n",
+    "        rmsd = rmsd_from_mean_single_sample(df, sample, column)\n",
+    "        rmsd_list.append({\"sample\": sample, \"rmsd\": rmsd})\n",
+    "    return pd.DataFrame(rmsd_list)\n",
+    "\n",
+    "def rmsd_from_mean_all_samples_multi_columns(\n",
+    "    df: pd.DataFrame,\n",
+    "    columns: list[str],\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Calculate the root mean square deviation from the mean for all samples for multiple columns.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    columns : list[str]\n",
+    "        The columns to calculate the RMSD for.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pd.DataFrame\n",
+    "        A DataFrame containing the RMSD from the mean for each sample and column.\n",
+    "    \"\"\"\n",
+    "    rmsd_list = []\n",
+    "    for column in columns:\n",
+    "        rmsd_df = rmsd_from_mean_all_samples(df, column)\n",
+    "        rmsd_df[\"column\"] = column\n",
+    "        rmsd_list.append(rmsd_df)\n",
+    "    return pd.concat(rmsd_list, ignore_index=True)\n",
+    "\n",
+    "def plot_rmsd_from_mean(\n",
+    "    df: pd.DataFrame,\n",
+    "    column: str,\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Plot the root mean square deviation from the mean for a single column.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    column : str\n",
+    "        The column to plot the RMSD for.\n",
+    "    \"\"\"\n",
+    "    rmsd_df = rmsd_from_mean_all_samples(df, column)\n",
+    "    plt.figure()\n",
+    "    sns.barplot(x=\"sample\", y=\"rmsd\", data=rmsd_df)\n",
+    "    plt.xticks(rotation=90)\n",
+    "    plt.ylabel(\"RMSD from mean\")\n",
+    "    plt.xlabel(\"sample\")\n",
+    "    plt.title(f\"RMSD from mean for {column}\")\n",
+    "    simpleticks()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def distances_from_centroid_two_cols_for_sample(\n",
+    "    df: pd.DataFrame,\n",
+    "    sample: str,\n",
+    "    column1: str,\n",
+    "    column2: str,\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Calculate the distances from the centroid for the scatter plot of two columns for a single sample.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    sample : str\n",
+    "        The sample to calculate the distances for.\n",
+    "    column1 : str\n",
+    "        The first column to calculate the distances for.\n",
+    "    column2 : str\n",
+    "        The second column to calculate the distances for.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    npt.NDArray\n",
+    "        The distances from the centroid for the sample.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    sample_data = df[df[\"display_name\"] == sample]\n",
+    "    centroid = np.array([sample_data[column1].mean(), sample_data[column2].mean()])\n",
+    "    distances = np.sqrt(((sample_data[[column1, column2]].values - centroid) ** 2).sum(axis=1))\n",
+    "    return distances\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
