[WIP] normalised col1xcol2 euclidean distance strip plot (unsure)

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -793,147 +793,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ba848a",
+   "id": "0750fd38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rmsd_from_mean_single_sample(\n",
-    "    df: pd.DataFrame,\n",
-    "    sample: str,\n",
-    "    column: str,\n",
-    ") -> float:\n",
+    "grains_centroid_diffs_protein_only_df = grains_df[grains_df[\"protein_present\"] == 1].copy()\n",
+    "\n",
+    "# total branch length\n",
+    "# total protein volume\n",
+    "\n",
+    "tbl_max = grains_df[\"total_branch_lengths\"].max()\n",
+    "tbl_min = grains_df[\"total_branch_lengths\"].min()\n",
+    "tpv_max = grains_df[\"total_protein_volume\"].max()\n",
+    "tpv_min = grains_df[\"total_protein_volume\"].min()\n",
+    "\n",
+    "# normalise the TBL and TPV values and add to new columns\n",
+    "grains_centroid_diffs_protein_only_df[\"total_branch_lengths_normalised\"] = (\n",
+    "    grains_centroid_diffs_protein_only_df[\"total_branch_lengths\"] - tbl_min\n",
+    ") / (tbl_max - tbl_min)\n",
+    "grains_centroid_diffs_protein_only_df[\"total_protein_volume_normalised\"] = (\n",
+    "    grains_centroid_diffs_protein_only_df[\"total_protein_volume\"] - tpv_min\n",
+    ") / (tpv_max - tpv_min)\n",
+    "\n",
+    "# do this for all samples\n",
+    "\n",
+    "for display_name in display_names:\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    # get the min and max for TBL and TPV\n",
+    "    tbl_max = display_name_data[\"total_branch_lengths\"].max()\n",
+    "    tbl_min = display_name_data[\"total_branch_lengths\"].min()\n",
+    "    tpv_max = display_name_data[\"total_protein_volume\"].max()\n",
+    "    tpv_min = display_name_data[\"total_protein_volume\"].min()\n",
+    "\n",
+    "    # normalise the TBL and TPV values and add to new columns\n",
+    "    grains_centroid_diffs_protein_only_df.loc[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name,\n",
+    "        \"total_branch_lengths_normalised\",\n",
+    "    ] = (grains_centroid_diffs_protein_only_df[\"total_branch_lengths\"] - tbl_min) / (tbl_max - tbl_min)\n",
+    "    grains_centroid_diffs_protein_only_df.loc[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name,\n",
+    "        \"total_protein_volume_normalised\",\n",
+    "    ] = (grains_centroid_diffs_protein_only_df[\"total_protein_volume\"] - tpv_min) / (tpv_max - tpv_min)\n",
+    "\n",
+    "# now for each sample calculate the centroid of the TBL and TPV values and then create a new column with the euclidean distance for each grain\n",
+    "def euclidean_distance(x: np.ndarray, y: np.ndarray) -> float:\n",
     "    \"\"\"\n",
-    "    Calculate the root mean square deviation from the mean for a single sample.\n",
-    "    \n",
+    "    Calculate the Euclidean distance between two points.\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    df : pd.DataFrame\n",
-    "        The DataFrame containing the data.\n",
-    "    sample : str\n",
-    "        The sample to calculate the RMSD for.\n",
-    "    column : str\n",
-    "        The column to calculate the RMSD for.\n",
+    "    x : np.ndarray\n",
+    "        The first point.\n",
+    "    y : np.ndarray\n",
+    "        The second point.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "    float\n",
-    "        The RMSD from the mean for the sample.\n",
+    "        The Euclidean distance between the two points.\n",
     "    \"\"\"\n",
-    "    sample_data = df[df[\"display_name\"] == sample]\n",
-    "    mean_value = sample_data[column].mean()\n",
-    "    rmsd = np.sqrt(((sample_data[column] - mean_value) ** 2).mean())\n",
-    "    return rmsd\n",
+    "    return np.sqrt(np.sum((x - y) ** 2))\n",
     "\n",
-    "def rmsd_from_mean_all_samples(\n",
-    "    df: pd.DataFrame,\n",
-    "    column: str,\n",
-    ") -> None:\n",
-    "    \"\"\"\n",
-    "    Calculate the root mean square deviation from the mean for all samples.\n",
+    "# create a new column for TBL_TPV euclidean distance\n",
+    "grains_centroid_diffs_protein_only_df[\"tbl_tpv_euclidean_distance\"] = np.nan\n",
+    "# for each display name, calculate the centroid of the TBL and TPV values\n",
+    "for display_name in display_names:\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    # get the centroid of the TBL and TPV values\n",
+    "    tbl_centroid = display_name_data[\"total_branch_lengths_normalised\"].mean()\n",
+    "    tpv_centroid = display_name_data[\"total_protein_volume_normalised\"].mean()\n",
+    "    # calculate the euclidean distance for each grain\n",
+    "    euclidean_distances = np.sqrt(\n",
+    "        (display_name_data[\"total_branch_lengths_normalised\"] - tbl_centroid) ** 2\n",
+    "        + (display_name_data[\"total_protein_volume_normalised\"] - tpv_centroid) ** 2\n",
+    "    )\n",
+    "    # add to the new column\n",
+    "    grains_centroid_diffs_protein_only_df.loc[\n",
+    "        grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name, \"tbl_tpv_euclidean_distance\"\n",
+    "    ] = euclidean_distances\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pd.DataFrame\n",
-    "        The DataFrame containing the data.\n",
-    "    column : str\n",
-    "        The column to calculate the RMSD for.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    pd.DataFrame\n",
-    "        A DataFrame containing the RMSD from the mean for each sample.\n",
-    "    \"\"\"\n",
-    "    rmsd_list = []\n",
-    "    for sample in df[\"display_name\"].unique():\n",
-    "        rmsd = rmsd_from_mean_single_sample(df, sample, column)\n",
-    "        rmsd_list.append({\"sample\": sample, \"rmsd\": rmsd})\n",
-    "    return pd.DataFrame(rmsd_list)\n",
-    "\n",
-    "def rmsd_from_mean_all_samples_multi_columns(\n",
-    "    df: pd.DataFrame,\n",
-    "    columns: list[str],\n",
-    ") -> None:\n",
-    "    \"\"\"\n",
-    "    Calculate the root mean square deviation from the mean for all samples for multiple columns.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pd.DataFrame\n",
-    "        The DataFrame containing the data.\n",
-    "    columns : list[str]\n",
-    "        The columns to calculate the RMSD for.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    pd.DataFrame\n",
-    "        A DataFrame containing the RMSD from the mean for each sample and column.\n",
-    "    \"\"\"\n",
-    "    rmsd_list = []\n",
-    "    for column in columns:\n",
-    "        rmsd_df = rmsd_from_mean_all_samples(df, column)\n",
-    "        rmsd_df[\"column\"] = column\n",
-    "        rmsd_list.append(rmsd_df)\n",
-    "    return pd.concat(rmsd_list, ignore_index=True)\n",
-    "\n",
-    "def plot_rmsd_from_mean(\n",
-    "    df: pd.DataFrame,\n",
-    "    column: str,\n",
-    ") -> None:\n",
-    "    \"\"\"\n",
-    "    Plot the root mean square deviation from the mean for a single column.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pd.DataFrame\n",
-    "        The DataFrame containing the data.\n",
-    "    column : str\n",
-    "        The column to plot the RMSD for.\n",
-    "    \"\"\"\n",
-    "    rmsd_df = rmsd_from_mean_all_samples(df, column)\n",
-    "    plt.figure()\n",
-    "    sns.barplot(x=\"sample\", y=\"rmsd\", data=rmsd_df)\n",
-    "    plt.xticks(rotation=90)\n",
-    "    plt.ylabel(\"RMSD from mean\")\n",
-    "    plt.xlabel(\"sample\")\n",
-    "    plt.title(f\"RMSD from mean for {column}\")\n",
-    "    simpleticks()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def distances_from_centroid_two_cols_for_sample(\n",
-    "    df: pd.DataFrame,\n",
-    "    sample: str,\n",
-    "    column1: str,\n",
-    "    column2: str,\n",
-    ") -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Calculate the distances from the centroid for the scatter plot of two columns for a single sample.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pd.DataFrame\n",
-    "        The DataFrame containing the data.\n",
-    "    sample : str\n",
-    "        The sample to calculate the distances for.\n",
-    "    column1 : str\n",
-    "        The first column to calculate the distances for.\n",
-    "    column2 : str\n",
-    "        The second column to calculate the distances for.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    npt.NDArray\n",
-    "        The distances from the centroid for the sample.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    sample_data = df[df[\"display_name\"] == sample]\n",
-    "    centroid = np.array([sample_data[column1].mean(), sample_data[column2].mean()])\n",
-    "    distances = np.sqrt(((sample_data[[column1, column2]].values - centroid) ** 2).sum(axis=1))\n",
-    "    return distances\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# plot the euclidean distance vs display name as a strip plot\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"tbl_tpv_euclidean_distance\",\n",
+    "    data=grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"tbl_tpv_euclidean_distance\",\n",
+    "    data=grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"euclidean distance (normalised TBL and TPV)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"euclidean distance between TBL and TPV for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n"
    ]
   }
  ],
