--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -799,31 +799,14 @@
    "source": [
     "grains_centroid_diffs_protein_only_df = grains_df[grains_df[\"protein_present\"] == 1].copy()\n",
     "\n",
-    "# total branch length\n",
-    "# total protein volume\n",
-    "\n",
+    "# normalise the TBL and TPV values across all samples to keep relative differences\n",
     "tbl_max = grains_df[\"total_branch_lengths\"].max()\n",
     "tbl_min = grains_df[\"total_branch_lengths\"].min()\n",
     "tpv_max = grains_df[\"total_protein_volume\"].max()\n",
     "tpv_min = grains_df[\"total_protein_volume\"].min()\n",
     "\n",
-    "# normalise the TBL and TPV values and add to new columns\n",
-    "grains_centroid_diffs_protein_only_df[\"total_branch_lengths_normalised\"] = (\n",
-    "    grains_centroid_diffs_protein_only_df[\"total_branch_lengths\"] - tbl_min\n",
-    ") / (tbl_max - tbl_min)\n",
-    "grains_centroid_diffs_protein_only_df[\"total_protein_volume_normalised\"] = (\n",
-    "    grains_centroid_diffs_protein_only_df[\"total_protein_volume\"] - tpv_min\n",
-    ") / (tpv_max - tpv_min)\n",
-    "\n",
-    "# do this for all samples\n",
-    "\n",
     "for display_name in display_names:\n",
     "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
-    "    # get the min and max for TBL and TPV\n",
-    "    tbl_max = display_name_data[\"total_branch_lengths\"].max()\n",
-    "    tbl_min = display_name_data[\"total_branch_lengths\"].min()\n",
-    "    tpv_max = display_name_data[\"total_protein_volume\"].max()\n",
-    "    tpv_min = display_name_data[\"total_protein_volume\"].min()\n",
     "\n",
     "    # normalise the TBL and TPV values and add to new columns\n",
     "    grains_centroid_diffs_protein_only_df.loc[\n",
@@ -853,6 +836,31 @@
     "        The Euclidean distance between the two points.\n",
     "    \"\"\"\n",
     "    return np.sqrt(np.sum((x - y) ** 2))\n",
+    "\n",
+    "# plot scatter plots of post-nomalisation TBL vs TPV for each sample, in a grid\n",
+    "plot_cols = 3\n",
+    "plot_rows = int(np.ceil(len(display_names) / plot_cols))\n",
+    "plt.figure(figsize=(plot_cols * 5, plot_rows * 5))\n",
+    "for i, display_name in enumerate(display_names):\n",
+    "    display_name_data = grains_centroid_diffs_protein_only_df[grains_centroid_diffs_protein_only_df[\"display_name\"] == display_name]\n",
+    "    ax = plt.subplot(plot_rows, plot_cols, i + 1)\n",
+    "    # scatterplot\n",
+    "    sns.scatterplot(\n",
+    "        x=\"total_branch_lengths_normalised\",\n",
+    "        y=\"total_protein_volume_normalised\",\n",
+    "        data=display_name_data[display_name_data[\"protein_present\"] == 1],\n",
+    "        color=\"orange\",\n",
+    "        alpha=1,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "    ax.set_title(display_name)\n",
+    "    ax.set_xlabel(\"normalised total branch lengths\")\n",
+    "    ax.set_ylabel(\"normalised total protein volume\")\n",
+    "    ax.set_xlim(0, 1.1)\n",
+    "    ax.set_ylim(0, 1.1)\n",
+    "    ax.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
     "# create a new column for TBL_TPV euclidean distance\n",
     "grains_centroid_diffs_protein_only_df[\"tbl_tpv_euclidean_distance\"] = np.nan\n",
@@ -889,10 +897,10 @@
     "    alpha=0.5,\n",
     ")\n",
     "plt.xticks(rotation=90)\n",
-    "plt.ylabel(\"euclidean distance (normalised TBL and TPV)\")\n",
+    "plt.ylabel(\"euclidean distance from\\ncentroid for normalised\\ntotal branch lengths\\nvs total protein volume\")\n",
     "plt.xlabel(\"sample type\")\n",
-    "plt.title(\"euclidean distance between TBL and TPV for grains with protein\")\n",
     "simpleticks()\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   }
