add poct-hoc stats test for normalised tbl v tpv euclidean distance

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -901,6 +901,44 @@
     "plt.xlabel(\"sample type\")\n",
     "simpleticks()\n",
     "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# post-hoc test for tbl tpv euclidean distance\n",
+    "posthoc_tbl_tpv_euclidean_distance_results = posthoc_dunn(\n",
+    "    grains_centroid_diffs_protein_only_df,\n",
+    "    val_col=\"tbl_tpv_euclidean_distance\",\n",
+    "    group_col=\"display_name\",\n",
+    "    p_adjust=\"holm\",\n",
+    ")\n",
+    "print(\"post-hoc test results:\")\n",
+    "print(posthoc_tbl_tpv_euclidean_distance_results)\n",
+    "# create a plot of a matrix of the results\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_tbl_tpv_euclidean_distance_results,\n",
+    "    annot=True,\n",
+    "    fmt=\".2e\",\n",
+    "    cmap=\"binary_r\",\n",
+    "    cbar_kws={\"label\": \"p-value\"},\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for tbl tpv euclidean distance\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
+    "plt.show()\n",
+    "# same matrix plot but binary with threshold 0.05\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.heatmap(\n",
+    "    posthoc_tbl_tpv_euclidean_distance_results < threshold,\n",
+    "    annot=posthoc_tbl_tpv_euclidean_distance_results < threshold,\n",
+    "    fmt=\"\",\n",
+    "    cmap=\"binary\",\n",
+    "    cbar=False,\n",
+    ")\n",
+    "plt.title(\"Post-hoc Dunn's test results for tbl tpv euclidean distance (p-value < 0.05)\")\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "simpleticks_x_y()\n",
     "plt.show()\n"
    ]
   }
